# fake-data-loader

./: .gitignore  README.md  pyproject.toml  run-pg.sh
fake_data_loader/: auth_handler.py  cli.py  ddl.py  event_generator.py  exceptions.py  logger.py  targets.py
