[tool.poetry]
name = "fake-data-loader"
version = "0.1.0"
description = ""
authors = ["jduran9987 <jduran9987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pyyaml = "^6.0.1"
faker = "^25.2.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.131"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
